k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kapa-core-service
spec:
  selector:
    app: kapa-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
